# cs344

./: .gitignore  CMakeLists.txt
Problem Sets/Problem Set 1/: CMakeLists.txt  HW1.cpp  Makefile  main.cpp  reference_calc.cpp  student_func.cu  timer.h  utils.h
Problem Sets/Problem Set 2/: student_func.cu
